Fixed git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@
 # Visual Studio cache directory
 .vs/
 
-#VS Code settings
-.vscode
+# VS Code settings
+.vscode/
 
 # Gradle cache directory
 .gradle/
